--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,116 +1,116 @@
 body {
-	/*background-color: #FFDAB9;	*/
+	/*background-color: #ADD8E6;*/  /* Light Blue */
 	background-color: #000;
-	-webkit-transition:background-color linear 5s;
-	-moz-transition:background-color linear 5s;
-	-o-transition:background-color linear 5s;
-	-ms-transition:background-color linear 5s;
-	transition:background-color linear 5s;
-	overflow-x:hidden;
+	-webkit-transition: background-color linear 5s;
+	-moz-transition: background-color linear 5s;
+	-o-transition: background-color linear 5s;
+	-ms-transition: background-color linear 5s;
+	transition: background-color linear 5s;
+	overflow-x: hidden;
 }
+
 .container {
 	display: none;
 }
+
 .peach {
-	background-color: #FFDAB9;
-	
+	background-color: #ADD8E6;  /* Light Blue */
 }
+
 .peach-after {
-	-webkit-animation:peach_alive linear 8s infinite;
-	-moz-animation:peach_alive linear 8s infinite;
-	-o-animation:peach_alive linear 8s infinite;
-	-ms-animation:peach_alive linear 8s infinite;
-	animation:peach_alive linear 8s infinite;
+	-webkit-animation: peach_alive linear 8s infinite;
+	-moz-animation: peach_alive linear 8s infinite;
+	-o-animation: peach_alive linear 8s infinite;
+	-ms-animation: peach_alive linear 8s infinite;
+	animation: peach_alive linear 8s infinite;
 }
 
 @-webkit-keyframes peach_alive {
-	0%{
-		background-color: #FFDAB9;
+	0% {
+		background-color: #ADD8E6;
 	}
-	25%{
-		background-color: #FFE4B5;
+	25% {
+		background-color: #87CEFA;
 	}
-	50%{
-		background-color: #FFDAB9;
+	50% {
+		background-color: #ADD8E6;
 	}
-	75%{
-		background-color: #FFEFD5;
+	75% {
+		background-color: #87CEEB;
 	}
-	100%{
-		background-color: #FFDAB9;
+	100% {
+		background-color: #ADD8E6;
 	}
 }
 @-moz-keyframes peach_alive {
-	0%{
-		background-color: #FFDAB9;
+	0% {
+		background-color: #ADD8E6;
 	}
-	25%{
-		background-color: #FFE4B5;
+	25% {
+		background-color: #87CEFA;
 	}
-	50%{
-		background-color: #FFDAB9;
+	50% {
+		background-color: #ADD8E6;
 	}
-	75%{
-		background-color: #FFEFD5;
+	75% {
+		background-color: #87CEEB;
 	}
-	100%{
-		background-color: #FFDAB9;
+	100% {
+		background-color: #ADD8E6;
 	}
 }
-
 @-o-keyframes peach_alive {
-	0%{
-		background-color: #FFDAB9;
+	0% {
+		background-color: #ADD8E6;
 	}
-	25%{
-		background-color: #FFE4B5;
+	25% {
+		background-color: #87CEFA;
 	}
-	50%{
-		background-color: #FFDAB9;
+	50% {
+		background-color: #ADD8E6;
 	}
-	75%{
-		background-color: #FFEFD5;
+	75% {
+		background-color: #87CEEB;
 	}
-	100%{
-		background-color: #FFDAB9;
+	100% {
+		background-color: #ADD8E6;
 	}
 }
-
 @-ms-keyframes peach_alive {
-	0%{
-		background-color: #FFDAB9;
+	0% {
+		background-color: #ADD8E6;
 	}
-	25%{
-		background-color: #FFE4B5;
+	25% {
+		background-color: #87CEFA;
 	}
-	50%{
-		background-color: #FFDAB9;
+	50% {
+		background-color: #ADD8E6;
 	}
-	75%{
-		background-color: #FFEFD5;
+	75% {
+		background-color: #87CEEB;
 	}
-	100%{
-		background-color: #FFDAB9;
+	100% {
+		background-color: #ADD8E6;
+	}
+}
+@keyframes peach_alive {
+	0% {
+		background-color: #ADD8E6;
+	}
+	25% {
+		background-color: #87CEFA;
+	}
+	50% {
+		background-color: #ADD8E6;
+	}
+	75% {
+		background-color: #87CEEB;
+	}
+	100% {
+		background-color: #ADD8E6;
 	}
 }
 
-@keyframes peach_alive {
-	0%{
-		background-color: #FFDAB9;
-	}
-	25%{
-		background-color: #FFE4B5;
-	}
-	50%{
-		background-color: #FFDAB9;
-	}
-	75%{
-		background-color: #FFEFD5;
-	}
-	100%{
-		background-color: #FFDAB9;
-	}
-}
 
 
 .bulb {
